// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Avatar demo examples Snapshots: basic 1`] = `
.emotion-1 {
  box-sizing: border-box;
  color: #ffffff;
  font-family: "Open Sans",-apple-system,system-ui,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 16px;
  line-height: 2.5em;
  outline: 0;
  -moz-osx-font-smoothing: auto;
  -webkit-font-smoothing: antialiased;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #3272d9;
  border-radius: 100%;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-weight: 700;
  height: 2.5em;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  vertical-align: middle;
  width: 2.5em;
}

.emotion-1 *,
.emotion-1 *::before,
.emotion-1 *::after {
  box-sizing: inherit;
}

.emotion-1 > abbr,
.emotion-1 > span {
  font-size: 1.125em;
}

.emotion-1 > abbr {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-1 > img {
  border-radius: 100%;
  display: block;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  max-width: 100%;
}

.emotion-1 > [role="img"] {
  color: #ffffff;
}

.emotion-4[class] > * {
  margin-right: 1rem;
  margin-bottom: 1rem;
}

.emotion-0 {
  box-sizing: border-box;
  color: #ffffff;
  font-family: "Open Sans",-apple-system,system-ui,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 16px;
  line-height: 2.5em;
  outline: 0;
  -moz-osx-font-smoothing: auto;
  -webkit-font-smoothing: antialiased;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 100%;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-weight: 700;
  height: 2.5em;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  vertical-align: middle;
  width: 2.5em;
}

.emotion-0 *,
.emotion-0 *::before,
.emotion-0 *::after {
  box-sizing: inherit;
}

.emotion-0 > abbr,
.emotion-0 > span {
  font-size: 1.125em;
}

.emotion-0 > abbr {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-0 > img {
  border-radius: 100%;
  display: block;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  max-width: 100%;
}

.emotion-0 > [role="img"] {
  color: #ffffff;
}

.emotion-3 {
  box-sizing: border-box;
  color: #ffffff;
  font-family: "Open Sans",-apple-system,system-ui,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 16px;
  line-height: 2.5em;
  outline: 0;
  -moz-osx-font-smoothing: auto;
  -webkit-font-smoothing: antialiased;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #3272d9;
  border-radius: 100%;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-weight: 700;
  height: 2.5em;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  vertical-align: middle;
  width: 2.5em;
}

.emotion-3 *,
.emotion-3 *::before,
.emotion-3 *::after {
  box-sizing: inherit;
}

.emotion-3 > abbr {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-3 > img {
  border-radius: 100%;
  display: block;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  max-width: 100%;
}

.emotion-3 > [role="img"] {
  color: #ffffff;
}

.emotion-2 {
  fill: currentcolor;
  font-size: 16px;
  height: 1.5em;
  width: 1.5em;
}

<DemoLayout>
  <DemoLayout
    includeLastChild={true}
    marginRight="1rem"
  >
    <Styled(div)
      includeLastChild={true}
      marginBottom="1rem"
      marginRight="1rem"
    >
      <div
        className="emotion-4"
      >
        <Avatar
          shape="circle"
          size="large"
        >
          <Avatar
            noBackground={true}
            shape="circle"
            size="large"
          >
            <span
              className="emotion-0"
            >
              <img
                alt="Allison"
                src="/images/avatar.svg"
              />
            </span>
          </Avatar>
        </Avatar>
        <Avatar
          shape="circle"
          size="large"
        >
          <Avatar
            shape="circle"
            size="large"
          >
            <span
              className="emotion-1"
            >
              <abbr
                title="Allison"
              >
                A
              </abbr>
            </span>
          </Avatar>
        </Avatar>
        <Avatar
          shape="circle"
          size="large"
        >
          <Avatar
            icon={
              <IconCloud
                size="1.5em"
                title="cloud"
              />
            }
            shape="circle"
            size="large"
          >
            <span
              className="emotion-3"
            >
              <IconCloud
                size="1.5em"
                title="cloud"
              >
                <Icon
                  rtl={false}
                  size="1.5em"
                  title="cloud"
                >
                  <Styled(svg)
                    aria-hidden={null}
                    aria-labelledby="icon-title-icon-1"
                    focusable="false"
                    role="img"
                    rtl={false}
                    size="1.5em"
                    viewBox="0 0 24 24"
                  >
                    <svg
                      aria-hidden={null}
                      aria-labelledby="icon-title-icon-1"
                      className="emotion-2"
                      focusable="false"
                      role="img"
                      viewBox="0 0 24 24"
                    >
                      <title
                        id="icon-title-icon-1"
                      >
                        cloud
                      </title>
                      <g>
                        <path
                          d="M19.35 10.04A7.49 7.49 0 0 0 12 4C9.11 4 6.6 5.64 5.35 8.04A5.994 5.994 0 0 0 0 14c0 3.31 2.69 6 6 6h13c2.76 0 5-2.24 5-5 0-2.64-2.05-4.78-4.65-4.96z"
                        />
                      </g>
                    </svg>
                  </Styled(svg)>
                </Icon>
              </IconCloud>
            </span>
          </Avatar>
        </Avatar>
      </div>
    </Styled(div)>
  </DemoLayout>
</DemoLayout>
`;

exports[`Avatar demo examples Snapshots: colors 1`] = `
.emotion-0 {
  box-sizing: border-box;
  color: #ffffff;
  font-family: "Open Sans",-apple-system,system-ui,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 16px;
  line-height: 2.5em;
  outline: 0;
  -moz-osx-font-smoothing: auto;
  -webkit-font-smoothing: antialiased;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #3272d9;
  border-radius: 100%;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-weight: 700;
  height: 2.5em;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  vertical-align: middle;
  width: 2.5em;
}

.emotion-0 *,
.emotion-0 *::before,
.emotion-0 *::after {
  box-sizing: inherit;
}

.emotion-0 > abbr,
.emotion-0 > span {
  font-size: 1.125em;
}

.emotion-0 > abbr {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-0 > img {
  border-radius: 100%;
  display: block;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  max-width: 100%;
}

.emotion-0 > [role="img"] {
  color: #ffffff;
}

.emotion-14[class] > * {
  margin-right: 1rem;
  margin-bottom: 1rem;
}

.emotion-1 {
  box-sizing: border-box;
  color: #ffffff;
  font-family: "Open Sans",-apple-system,system-ui,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 16px;
  line-height: 2.5em;
  outline: 0;
  -moz-osx-font-smoothing: auto;
  -webkit-font-smoothing: antialiased;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #de1b1b;
  border-radius: 100%;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-weight: 700;
  height: 2.5em;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  vertical-align: middle;
  width: 2.5em;
}

.emotion-1 *,
.emotion-1 *::before,
.emotion-1 *::after {
  box-sizing: inherit;
}

.emotion-1 > abbr,
.emotion-1 > span {
  font-size: 1.125em;
}

.emotion-1 > abbr {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-1 > img {
  border-radius: 100%;
  display: block;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  max-width: 100%;
}

.emotion-1 > [role="img"] {
  color: #ffffff;
}

.emotion-2 {
  box-sizing: border-box;
  color: #ffffff;
  font-family: "Open Sans",-apple-system,system-ui,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 16px;
  line-height: 2.5em;
  outline: 0;
  -moz-osx-font-smoothing: auto;
  -webkit-font-smoothing: antialiased;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #d6246e;
  border-radius: 100%;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-weight: 700;
  height: 2.5em;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  vertical-align: middle;
  width: 2.5em;
}

.emotion-2 *,
.emotion-2 *::before,
.emotion-2 *::after {
  box-sizing: inherit;
}

.emotion-2 > abbr,
.emotion-2 > span {
  font-size: 1.125em;
}

.emotion-2 > abbr {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-2 > img {
  border-radius: 100%;
  display: block;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  max-width: 100%;
}

.emotion-2 > [role="img"] {
  color: #ffffff;
}

.emotion-3 {
  box-sizing: border-box;
  color: #ffffff;
  font-family: "Open Sans",-apple-system,system-ui,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 16px;
  line-height: 2.5em;
  outline: 0;
  -moz-osx-font-smoothing: auto;
  -webkit-font-smoothing: antialiased;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #9656d6;
  border-radius: 100%;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-weight: 700;
  height: 2.5em;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  vertical-align: middle;
  width: 2.5em;
}

.emotion-3 *,
.emotion-3 *::before,
.emotion-3 *::after {
  box-sizing: inherit;
}

.emotion-3 > abbr,
.emotion-3 > span {
  font-size: 1.125em;
}

.emotion-3 > abbr {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-3 > img {
  border-radius: 100%;
  display: block;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  max-width: 100%;
}

.emotion-3 > [role="img"] {
  color: #ffffff;
}

.emotion-4 {
  box-sizing: border-box;
  color: #ffffff;
  font-family: "Open Sans",-apple-system,system-ui,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 16px;
  line-height: 2.5em;
  outline: 0;
  -moz-osx-font-smoothing: auto;
  -webkit-font-smoothing: antialiased;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #6767e6;
  border-radius: 100%;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-weight: 700;
  height: 2.5em;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  vertical-align: middle;
  width: 2.5em;
}

.emotion-4 *,
.emotion-4 *::before,
.emotion-4 *::after {
  box-sizing: inherit;
}

.emotion-4 > abbr,
.emotion-4 > span {
  font-size: 1.125em;
}

.emotion-4 > abbr {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-4 > img {
  border-radius: 100%;
  display: block;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  max-width: 100%;
}

.emotion-4 > [role="img"] {
  color: #ffffff;
}

.emotion-6 {
  box-sizing: border-box;
  color: #ffffff;
  font-family: "Open Sans",-apple-system,system-ui,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 16px;
  line-height: 2.5em;
  outline: 0;
  -moz-osx-font-smoothing: auto;
  -webkit-font-smoothing: antialiased;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #0c7bb3;
  border-radius: 100%;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-weight: 700;
  height: 2.5em;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  vertical-align: middle;
  width: 2.5em;
}

.emotion-6 *,
.emotion-6 *::before,
.emotion-6 *::after {
  box-sizing: inherit;
}

.emotion-6 > abbr,
.emotion-6 > span {
  font-size: 1.125em;
}

.emotion-6 > abbr {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-6 > img {
  border-radius: 100%;
  display: block;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  max-width: 100%;
}

.emotion-6 > [role="img"] {
  color: #ffffff;
}

.emotion-7 {
  box-sizing: border-box;
  color: #ffffff;
  font-family: "Open Sans",-apple-system,system-ui,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 16px;
  line-height: 2.5em;
  outline: 0;
  -moz-osx-font-smoothing: auto;
  -webkit-font-smoothing: antialiased;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #17827b;
  border-radius: 100%;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-weight: 700;
  height: 2.5em;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  vertical-align: middle;
  width: 2.5em;
}

.emotion-7 *,
.emotion-7 *::before,
.emotion-7 *::after {
  box-sizing: inherit;
}

.emotion-7 > abbr,
.emotion-7 > span {
  font-size: 1.125em;
}

.emotion-7 > abbr {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-7 > img {
  border-radius: 100%;
  display: block;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  max-width: 100%;
}

.emotion-7 > [role="img"] {
  color: #ffffff;
}

.emotion-8 {
  box-sizing: border-box;
  color: #ffffff;
  font-family: "Open Sans",-apple-system,system-ui,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 16px;
  line-height: 2.5em;
  outline: 0;
  -moz-osx-font-smoothing: auto;
  -webkit-font-smoothing: antialiased;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #2a854e;
  border-radius: 100%;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-weight: 700;
  height: 2.5em;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  vertical-align: middle;
  width: 2.5em;
}

.emotion-8 *,
.emotion-8 *::before,
.emotion-8 *::after {
  box-sizing: inherit;
}

.emotion-8 > abbr,
.emotion-8 > span {
  font-size: 1.125em;
}

.emotion-8 > abbr {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-8 > img {
  border-radius: 100%;
  display: block;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  max-width: 100%;
}

.emotion-8 > [role="img"] {
  color: #ffffff;
}

.emotion-9 {
  box-sizing: border-box;
  color: #ffffff;
  font-family: "Open Sans",-apple-system,system-ui,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 16px;
  line-height: 2.5em;
  outline: 0;
  -moz-osx-font-smoothing: auto;
  -webkit-font-smoothing: antialiased;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #ad5f00;
  border-radius: 100%;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-weight: 700;
  height: 2.5em;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  vertical-align: middle;
  width: 2.5em;
}

.emotion-9 *,
.emotion-9 *::before,
.emotion-9 *::after {
  box-sizing: inherit;
}

.emotion-9 > abbr,
.emotion-9 > span {
  font-size: 1.125em;
}

.emotion-9 > abbr {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-9 > img {
  border-radius: 100%;
  display: block;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  max-width: 100%;
}

.emotion-9 > [role="img"] {
  color: #ffffff;
}

.emotion-10 {
  box-sizing: border-box;
  color: #1d1f24;
  font-family: "Open Sans",-apple-system,system-ui,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 16px;
  line-height: 2.5em;
  outline: 0;
  -moz-osx-font-smoothing: auto;
  -webkit-font-smoothing: antialiased;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #8e99ab;
  border-radius: 100%;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-weight: 700;
  height: 2.5em;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  vertical-align: middle;
  width: 2.5em;
}

.emotion-10 *,
.emotion-10 *::before,
.emotion-10 *::after {
  box-sizing: inherit;
}

.emotion-10 > abbr,
.emotion-10 > span {
  font-size: 1.125em;
}

.emotion-10 > abbr {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-10 > img {
  border-radius: 100%;
  display: block;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  max-width: 100%;
}

.emotion-10 > [role="img"] {
  color: #1d1f24;
}

.emotion-11 {
  box-sizing: border-box;
  color: #ffffff;
  font-family: "Open Sans",-apple-system,system-ui,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 16px;
  line-height: 2.5em;
  outline: 0;
  -moz-osx-font-smoothing: auto;
  -webkit-font-smoothing: antialiased;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #48799c;
  border-radius: 100%;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-weight: 700;
  height: 2.5em;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  vertical-align: middle;
  width: 2.5em;
}

.emotion-11 *,
.emotion-11 *::before,
.emotion-11 *::after {
  box-sizing: inherit;
}

.emotion-11 > abbr,
.emotion-11 > span {
  font-size: 1.125em;
}

.emotion-11 > abbr {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-11 > img {
  border-radius: 100%;
  display: block;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  max-width: 100%;
}

.emotion-11 > [role="img"] {
  color: #ffffff;
}

.emotion-12 {
  box-sizing: border-box;
  color: #ffffff;
  font-family: "Open Sans",-apple-system,system-ui,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 16px;
  line-height: 2.5em;
  outline: 0;
  -moz-osx-font-smoothing: auto;
  -webkit-font-smoothing: antialiased;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #7a68b3;
  border-radius: 100%;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-weight: 700;
  height: 2.5em;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  vertical-align: middle;
  width: 2.5em;
}

.emotion-12 *,
.emotion-12 *::before,
.emotion-12 *::after {
  box-sizing: inherit;
}

.emotion-12 > abbr,
.emotion-12 > span {
  font-size: 1.125em;
}

.emotion-12 > abbr {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-12 > img {
  border-radius: 100%;
  display: block;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  max-width: 100%;
}

.emotion-12 > [role="img"] {
  color: #ffffff;
}

.emotion-13 {
  box-sizing: border-box;
  color: hsl(322,71%,27%);
  font-family: "Open Sans",-apple-system,system-ui,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 16px;
  line-height: 2.5em;
  outline: 0;
  -moz-osx-font-smoothing: auto;
  -webkit-font-smoothing: antialiased;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: rgba(139,231,172,0.8);
  border-radius: 100%;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-weight: 700;
  height: 2.5em;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  vertical-align: middle;
  width: 2.5em;
}

.emotion-13 *,
.emotion-13 *::before,
.emotion-13 *::after {
  box-sizing: inherit;
}

.emotion-13 > abbr,
.emotion-13 > span {
  font-size: 1.125em;
}

.emotion-13 > abbr {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-13 > img {
  border-radius: 100%;
  display: block;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  max-width: 100%;
}

.emotion-13 > [role="img"] {
  color: hsl(322,71%,27%);
}

<DemoLayout>
  <DemoLayout
    includeLastChild={true}
    marginRight="1rem"
  >
    <Styled(div)
      includeLastChild={true}
      marginBottom="1rem"
      marginRight="1rem"
    >
      <div
        className="emotion-14"
      >
        <Avatar
          shape="circle"
          size="large"
        >
          <Avatar
            shape="circle"
            size="large"
          >
            <span
              className="emotion-0"
            >
              <abbr
                title="Theme  "
              >
                T
              </abbr>
            </span>
          </Avatar>
        </Avatar>
        <Avatar
          background="#de1b1b"
          shape="circle"
          size="large"
        >
          <Avatar
            background="#de1b1b"
            shape="circle"
            size="large"
          >
            <span
              className="emotion-1"
            >
              <abbr
                title="Red    "
              >
                R
              </abbr>
            </span>
          </Avatar>
        </Avatar>
        <Avatar
          background="#d6246e"
          shape="circle"
          size="large"
        >
          <Avatar
            background="#d6246e"
            shape="circle"
            size="large"
          >
            <span
              className="emotion-2"
            >
              <abbr
                title="Magenta"
              >
                M
              </abbr>
            </span>
          </Avatar>
        </Avatar>
        <Avatar
          background="#9656d6"
          shape="circle"
          size="large"
        >
          <Avatar
            background="#9656d6"
            shape="circle"
            size="large"
          >
            <span
              className="emotion-3"
            >
              <abbr
                title="Purple "
              >
                P
              </abbr>
            </span>
          </Avatar>
        </Avatar>
        <Avatar
          background="#6767e6"
          shape="circle"
          size="large"
        >
          <Avatar
            background="#6767e6"
            shape="circle"
            size="large"
          >
            <span
              className="emotion-4"
            >
              <abbr
                title="Indigo "
              >
                I
              </abbr>
            </span>
          </Avatar>
        </Avatar>
        <Avatar
          background="#3272d9"
          shape="circle"
          size="large"
        >
          <Avatar
            background="#3272d9"
            shape="circle"
            size="large"
          >
            <span
              className="emotion-0"
            >
              <abbr
                title="Blue   "
              >
                B
              </abbr>
            </span>
          </Avatar>
        </Avatar>
        <Avatar
          background="#0c7bb3"
          shape="circle"
          size="large"
        >
          <Avatar
            background="#0c7bb3"
            shape="circle"
            size="large"
          >
            <span
              className="emotion-6"
            >
              <abbr
                title="Sky    "
              >
                S
              </abbr>
            </span>
          </Avatar>
        </Avatar>
        <Avatar
          background="#17827b"
          shape="circle"
          size="large"
        >
          <Avatar
            background="#17827b"
            shape="circle"
            size="large"
          >
            <span
              className="emotion-7"
            >
              <abbr
                title="Teal   "
              >
                T
              </abbr>
            </span>
          </Avatar>
        </Avatar>
        <Avatar
          background="#2a854e"
          shape="circle"
          size="large"
        >
          <Avatar
            background="#2a854e"
            shape="circle"
            size="large"
          >
            <span
              className="emotion-8"
            >
              <abbr
                title="Green  "
              >
                G
              </abbr>
            </span>
          </Avatar>
        </Avatar>
        <Avatar
          background="#ad5f00"
          shape="circle"
          size="large"
        >
          <Avatar
            background="#ad5f00"
            shape="circle"
            size="large"
          >
            <span
              className="emotion-9"
            >
              <abbr
                title="Bronze "
              >
                B
              </abbr>
            </span>
          </Avatar>
        </Avatar>
        <Avatar
          background="#8e99ab"
          color="#1d1f24"
          shape="circle"
          size="large"
        >
          <Avatar
            background="#8e99ab"
            color="#1d1f24"
            shape="circle"
            size="large"
          >
            <span
              className="emotion-10"
            >
              <abbr
                title="Gray"
              >
                G
              </abbr>
            </span>
          </Avatar>
        </Avatar>
        <Avatar
          background="#48799c"
          shape="circle"
          size="large"
        >
          <Avatar
            background="#48799c"
            shape="circle"
            size="large"
          >
            <span
              className="emotion-11"
            >
              <abbr
                title="Slate  "
              >
                S
              </abbr>
            </span>
          </Avatar>
        </Avatar>
        <Avatar
          background="#7a68b3"
          shape="circle"
          size="large"
        >
          <Avatar
            background="#7a68b3"
            shape="circle"
            size="large"
          >
            <span
              className="emotion-12"
            >
              <abbr
                title="Dusk   "
              >
                D
              </abbr>
            </span>
          </Avatar>
        </Avatar>
        <Avatar
          background="rgba(139,231,172,0.8)"
          color="hsl(322,71%,27%)"
          shape="circle"
          size="large"
        >
          <Avatar
            background="rgba(139,231,172,0.8)"
            color="hsl(322,71%,27%)"
            shape="circle"
            size="large"
          >
            <span
              className="emotion-13"
            >
              <abbr
                title="Custom"
              >
                C
              </abbr>
            </span>
          </Avatar>
        </Avatar>
      </div>
    </Styled(div)>
  </DemoLayout>
</DemoLayout>
`;

exports[`Avatar demo examples Snapshots: custom-text-abbr 1`] = `
.emotion-0 {
  box-sizing: border-box;
  color: #ffffff;
  font-family: "Open Sans",-apple-system,system-ui,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 16px;
  line-height: 2.5em;
  outline: 0;
  -moz-osx-font-smoothing: auto;
  -webkit-font-smoothing: antialiased;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #3272d9;
  border-radius: 100%;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-weight: 700;
  height: 2.5em;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  vertical-align: middle;
  width: 2.5em;
}

.emotion-0 *,
.emotion-0 *::before,
.emotion-0 *::after {
  box-sizing: inherit;
}

.emotion-0 > abbr,
.emotion-0 > span {
  font-size: 1.125em;
}

.emotion-0 > abbr {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-0 > img {
  border-radius: 100%;
  display: block;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  max-width: 100%;
}

.emotion-0 > [role="img"] {
  color: #ffffff;
}

<Avatar
  abbr="B"
  shape="circle"
  size="large"
>
  <Avatar
    shape="circle"
    size="large"
  >
    <span
      className="emotion-0"
    >
      <abbr
        title="Dr. Bernard Johnson"
      >
        B
      </abbr>
    </span>
  </Avatar>
</Avatar>
`;

exports[`Avatar demo examples Snapshots: shapes 1`] = `
.emotion-0 {
  box-sizing: border-box;
  color: #ffffff;
  font-family: "Open Sans",-apple-system,system-ui,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 16px;
  line-height: 2.5em;
  outline: 0;
  -moz-osx-font-smoothing: auto;
  -webkit-font-smoothing: antialiased;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #3272d9;
  border-radius: 100%;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-weight: 700;
  height: 2.5em;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  vertical-align: middle;
  width: 2.5em;
}

.emotion-0 *,
.emotion-0 *::before,
.emotion-0 *::after {
  box-sizing: inherit;
}

.emotion-0 > abbr,
.emotion-0 > span {
  font-size: 1.125em;
}

.emotion-0 > abbr {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-0 > img {
  border-radius: 100%;
  display: block;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  max-width: 100%;
}

.emotion-0 > [role="img"] {
  color: #ffffff;
}

.emotion-3[class] > * {
  margin-right: 1rem;
  margin-bottom: 1rem;
}

.emotion-1 {
  box-sizing: border-box;
  color: #ffffff;
  font-family: "Open Sans",-apple-system,system-ui,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 16px;
  line-height: 2.5em;
  outline: 0;
  -moz-osx-font-smoothing: auto;
  -webkit-font-smoothing: antialiased;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #3272d9;
  border-radius: 0.1875em;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-weight: 700;
  height: 2.5em;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  vertical-align: middle;
  width: 2.5em;
}

.emotion-1 *,
.emotion-1 *::before,
.emotion-1 *::after {
  box-sizing: inherit;
}

.emotion-1 > abbr,
.emotion-1 > span {
  font-size: 1.125em;
}

.emotion-1 > abbr {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-1 > img {
  border-radius: 100%;
  display: block;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  max-width: 100%;
}

.emotion-1 > [role="img"] {
  color: #ffffff;
}

.emotion-2 {
  box-sizing: border-box;
  color: #ffffff;
  font-family: "Open Sans",-apple-system,system-ui,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 16px;
  line-height: 2.5em;
  outline: 0;
  -moz-osx-font-smoothing: auto;
  -webkit-font-smoothing: antialiased;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #3272d9;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-weight: 700;
  height: 2.5em;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  vertical-align: middle;
  width: 2.5em;
}

.emotion-2 *,
.emotion-2 *::before,
.emotion-2 *::after {
  box-sizing: inherit;
}

.emotion-2 > abbr,
.emotion-2 > span {
  font-size: 1.125em;
}

.emotion-2 > abbr {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-2 > img {
  border-radius: 100%;
  display: block;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  max-width: 100%;
}

.emotion-2 > [role="img"] {
  color: #ffffff;
}

<DemoLayout>
  <DemoLayout
    includeLastChild={true}
    marginRight="1rem"
  >
    <Styled(div)
      includeLastChild={true}
      marginBottom="1rem"
      marginRight="1rem"
    >
      <div
        className="emotion-3"
      >
        <Avatar
          shape="circle"
          size="large"
        >
          <Avatar
            shape="circle"
            size="large"
          >
            <span
              className="emotion-0"
            >
              <abbr
                title="Circle"
              >
                C
              </abbr>
            </span>
          </Avatar>
        </Avatar>
        <Avatar
          shape="rounded"
          size="large"
        >
          <Avatar
            shape="rounded"
            size="large"
          >
            <span
              className="emotion-1"
            >
              <abbr
                title="Rounded"
              >
                R
              </abbr>
            </span>
          </Avatar>
        </Avatar>
        <Avatar
          shape="square"
          size="large"
        >
          <Avatar
            shape="square"
            size="large"
          >
            <span
              className="emotion-2"
            >
              <abbr
                title="Square"
              >
                S
              </abbr>
            </span>
          </Avatar>
        </Avatar>
      </div>
    </Styled(div)>
  </DemoLayout>
</DemoLayout>
`;

exports[`Avatar demo examples Snapshots: sizes 1`] = `
.emotion-9 {
  box-sizing: border-box;
  color: #ffffff;
  font-family: "Open Sans",-apple-system,system-ui,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 16px;
  line-height: 2.5em;
  outline: 0;
  -moz-osx-font-smoothing: auto;
  -webkit-font-smoothing: antialiased;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #3272d9;
  border-radius: 100%;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-weight: 700;
  height: 2.5em;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  vertical-align: middle;
  width: 2.5em;
}

.emotion-9 *,
.emotion-9 *::before,
.emotion-9 *::after {
  box-sizing: inherit;
}

.emotion-9 > abbr,
.emotion-9 > span {
  font-size: 1.125em;
}

.emotion-9 > abbr {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-9 > img {
  border-radius: 100%;
  display: block;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  max-width: 100%;
}

.emotion-9 > [role="img"] {
  color: #ffffff;
}

.emotion-16[class] > * {
  margin-right: 1rem;
  margin-bottom: 1rem;
}

.emotion-8 {
  box-sizing: border-box;
  color: #ffffff;
  font-family: "Open Sans",-apple-system,system-ui,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 16px;
  line-height: 2.5em;
  outline: 0;
  -moz-osx-font-smoothing: auto;
  -webkit-font-smoothing: antialiased;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 100%;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-weight: 700;
  height: 2.5em;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  vertical-align: middle;
  width: 2.5em;
}

.emotion-8 *,
.emotion-8 *::before,
.emotion-8 *::after {
  box-sizing: inherit;
}

.emotion-8 > abbr,
.emotion-8 > span {
  font-size: 1.125em;
}

.emotion-8 > abbr {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-8 > img {
  border-radius: 100%;
  display: block;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  max-width: 100%;
}

.emotion-8 > [role="img"] {
  color: #ffffff;
}

.emotion-11 {
  box-sizing: border-box;
  color: #ffffff;
  font-family: "Open Sans",-apple-system,system-ui,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 16px;
  line-height: 2.5em;
  outline: 0;
  -moz-osx-font-smoothing: auto;
  -webkit-font-smoothing: antialiased;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #3272d9;
  border-radius: 100%;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-weight: 700;
  height: 2.5em;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  vertical-align: middle;
  width: 2.5em;
}

.emotion-11 *,
.emotion-11 *::before,
.emotion-11 *::after {
  box-sizing: inherit;
}

.emotion-11 > abbr {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-11 > img {
  border-radius: 100%;
  display: block;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  max-width: 100%;
}

.emotion-11 > [role="img"] {
  color: #ffffff;
}

.emotion-10 {
  fill: currentcolor;
  font-size: 16px;
  height: 1.5em;
  width: 1.5em;
}

.emotion-0 {
  box-sizing: border-box;
  color: #ffffff;
  font-family: "Open Sans",-apple-system,system-ui,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 16px;
  line-height: 1.5em;
  outline: 0;
  -moz-osx-font-smoothing: auto;
  -webkit-font-smoothing: antialiased;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 100%;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-weight: 700;
  height: 1.5em;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  vertical-align: middle;
  width: 1.5em;
}

.emotion-0 *,
.emotion-0 *::before,
.emotion-0 *::after {
  box-sizing: inherit;
}

.emotion-0 > abbr,
.emotion-0 > span {
  font-size: 0.6875em;
}

.emotion-0 > abbr {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-0 > img {
  border-radius: 100%;
  display: block;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  max-width: 100%;
}

.emotion-0 > [role="img"] {
  color: #ffffff;
}

.emotion-1 {
  box-sizing: border-box;
  color: #ffffff;
  font-family: "Open Sans",-apple-system,system-ui,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 16px;
  line-height: 1.5em;
  outline: 0;
  -moz-osx-font-smoothing: auto;
  -webkit-font-smoothing: antialiased;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #3272d9;
  border-radius: 100%;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-weight: 700;
  height: 1.5em;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  vertical-align: middle;
  width: 1.5em;
}

.emotion-1 *,
.emotion-1 *::before,
.emotion-1 *::after {
  box-sizing: inherit;
}

.emotion-1 > abbr,
.emotion-1 > span {
  font-size: 0.6875em;
}

.emotion-1 > abbr {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-1 > img {
  border-radius: 100%;
  display: block;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  max-width: 100%;
}

.emotion-1 > [role="img"] {
  color: #ffffff;
}

.emotion-3 {
  box-sizing: border-box;
  color: #ffffff;
  font-family: "Open Sans",-apple-system,system-ui,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 16px;
  line-height: 1.5em;
  outline: 0;
  -moz-osx-font-smoothing: auto;
  -webkit-font-smoothing: antialiased;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #3272d9;
  border-radius: 100%;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-weight: 700;
  height: 1.5em;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  vertical-align: middle;
  width: 1.5em;
}

.emotion-3 *,
.emotion-3 *::before,
.emotion-3 *::after {
  box-sizing: inherit;
}

.emotion-3 > abbr {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-3 > img {
  border-radius: 100%;
  display: block;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  max-width: 100%;
}

.emotion-3 > [role="img"] {
  color: #ffffff;
}

.emotion-2 {
  fill: currentcolor;
  font-size: 16px;
  height: 1em;
  width: 1em;
}

.emotion-4 {
  box-sizing: border-box;
  color: #ffffff;
  font-family: "Open Sans",-apple-system,system-ui,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 16px;
  line-height: 2em;
  outline: 0;
  -moz-osx-font-smoothing: auto;
  -webkit-font-smoothing: antialiased;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 100%;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-weight: 700;
  height: 2em;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  vertical-align: middle;
  width: 2em;
}

.emotion-4 *,
.emotion-4 *::before,
.emotion-4 *::after {
  box-sizing: inherit;
}

.emotion-4 > abbr,
.emotion-4 > span {
  font-size: 0.875em;
}

.emotion-4 > abbr {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-4 > img {
  border-radius: 100%;
  display: block;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  max-width: 100%;
}

.emotion-4 > [role="img"] {
  color: #ffffff;
}

.emotion-5 {
  box-sizing: border-box;
  color: #ffffff;
  font-family: "Open Sans",-apple-system,system-ui,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 16px;
  line-height: 2em;
  outline: 0;
  -moz-osx-font-smoothing: auto;
  -webkit-font-smoothing: antialiased;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #3272d9;
  border-radius: 100%;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-weight: 700;
  height: 2em;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  vertical-align: middle;
  width: 2em;
}

.emotion-5 *,
.emotion-5 *::before,
.emotion-5 *::after {
  box-sizing: inherit;
}

.emotion-5 > abbr,
.emotion-5 > span {
  font-size: 0.875em;
}

.emotion-5 > abbr {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-5 > img {
  border-radius: 100%;
  display: block;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  max-width: 100%;
}

.emotion-5 > [role="img"] {
  color: #ffffff;
}

.emotion-7 {
  box-sizing: border-box;
  color: #ffffff;
  font-family: "Open Sans",-apple-system,system-ui,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 16px;
  line-height: 2em;
  outline: 0;
  -moz-osx-font-smoothing: auto;
  -webkit-font-smoothing: antialiased;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #3272d9;
  border-radius: 100%;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-weight: 700;
  height: 2em;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  vertical-align: middle;
  width: 2em;
}

.emotion-7 *,
.emotion-7 *::before,
.emotion-7 *::after {
  box-sizing: inherit;
}

.emotion-7 > abbr {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-7 > img {
  border-radius: 100%;
  display: block;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  max-width: 100%;
}

.emotion-7 > [role="img"] {
  color: #ffffff;
}

.emotion-12 {
  box-sizing: border-box;
  color: #ffffff;
  font-family: "Open Sans",-apple-system,system-ui,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 16px;
  line-height: 3.25em;
  outline: 0;
  -moz-osx-font-smoothing: auto;
  -webkit-font-smoothing: antialiased;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 100%;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-weight: 700;
  height: 3.25em;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  vertical-align: middle;
  width: 3.25em;
}

.emotion-12 *,
.emotion-12 *::before,
.emotion-12 *::after {
  box-sizing: inherit;
}

.emotion-12 > abbr,
.emotion-12 > span {
  font-size: 1.125em;
}

.emotion-12 > abbr {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-12 > img {
  border-radius: 100%;
  display: block;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  max-width: 100%;
}

.emotion-12 > [role="img"] {
  color: #ffffff;
}

.emotion-13 {
  box-sizing: border-box;
  color: #ffffff;
  font-family: "Open Sans",-apple-system,system-ui,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 16px;
  line-height: 3.25em;
  outline: 0;
  -moz-osx-font-smoothing: auto;
  -webkit-font-smoothing: antialiased;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #3272d9;
  border-radius: 100%;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-weight: 700;
  height: 3.25em;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  vertical-align: middle;
  width: 3.25em;
}

.emotion-13 *,
.emotion-13 *::before,
.emotion-13 *::after {
  box-sizing: inherit;
}

.emotion-13 > abbr,
.emotion-13 > span {
  font-size: 1.125em;
}

.emotion-13 > abbr {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-13 > img {
  border-radius: 100%;
  display: block;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  max-width: 100%;
}

.emotion-13 > [role="img"] {
  color: #ffffff;
}

.emotion-15 {
  box-sizing: border-box;
  color: #ffffff;
  font-family: "Open Sans",-apple-system,system-ui,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 16px;
  line-height: 3.25em;
  outline: 0;
  -moz-osx-font-smoothing: auto;
  -webkit-font-smoothing: antialiased;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #3272d9;
  border-radius: 100%;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-weight: 700;
  height: 3.25em;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  vertical-align: middle;
  width: 3.25em;
}

.emotion-15 *,
.emotion-15 *::before,
.emotion-15 *::after {
  box-sizing: inherit;
}

.emotion-15 > abbr {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-15 > img {
  border-radius: 100%;
  display: block;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  max-width: 100%;
}

.emotion-15 > [role="img"] {
  color: #ffffff;
}

<DemoLayout>
  <DemoLayout
    includeLastChild={true}
    marginRight="1rem"
  >
    <Styled(div)
      includeLastChild={true}
      marginBottom="1rem"
      marginRight="1rem"
    >
      <div
        className="emotion-16"
      >
        <Avatar
          shape="circle"
          size="small"
        >
          <Avatar
            noBackground={true}
            shape="circle"
            size="small"
          >
            <span
              className="emotion-0"
            >
              <img
                alt="Sam"
                src="/images/avatar.svg"
              />
            </span>
          </Avatar>
        </Avatar>
        <Avatar
          shape="circle"
          size="small"
        >
          <Avatar
            shape="circle"
            size="small"
          >
            <span
              className="emotion-1"
            >
              <abbr
                title="Sam"
              >
                S
              </abbr>
            </span>
          </Avatar>
        </Avatar>
        <Avatar
          shape="circle"
          size="small"
        >
          <Avatar
            icon={
              <IconCloud
                size="medium"
                title="cloud"
              />
            }
            shape="circle"
            size="small"
          >
            <span
              className="emotion-3"
            >
              <IconCloud
                size="medium"
                title="cloud"
              >
                <Icon
                  rtl={false}
                  size="medium"
                  title="cloud"
                >
                  <Styled(svg)
                    aria-hidden={null}
                    aria-labelledby="icon-title-icon-3"
                    focusable="false"
                    role="img"
                    rtl={false}
                    size="medium"
                    viewBox="0 0 24 24"
                  >
                    <svg
                      aria-hidden={null}
                      aria-labelledby="icon-title-icon-3"
                      className="emotion-2"
                      focusable="false"
                      role="img"
                      viewBox="0 0 24 24"
                    >
                      <title
                        id="icon-title-icon-3"
                      >
                        cloud
                      </title>
                      <g>
                        <path
                          d="M19.35 10.04A7.49 7.49 0 0 0 12 4C9.11 4 6.6 5.64 5.35 8.04A5.994 5.994 0 0 0 0 14c0 3.31 2.69 6 6 6h13c2.76 0 5-2.24 5-5 0-2.64-2.05-4.78-4.65-4.96z"
                        />
                      </g>
                    </svg>
                  </Styled(svg)>
                </Icon>
              </IconCloud>
            </span>
          </Avatar>
        </Avatar>
        <br />
        <Avatar
          shape="circle"
          size="medium"
        >
          <Avatar
            noBackground={true}
            shape="circle"
            size="medium"
          >
            <span
              className="emotion-4"
            >
              <img
                alt="Melissa"
                src="/images/avatar.svg"
              />
            </span>
          </Avatar>
        </Avatar>
        <Avatar
          shape="circle"
          size="medium"
        >
          <Avatar
            shape="circle"
            size="medium"
          >
            <span
              className="emotion-5"
            >
              <abbr
                title="Melissa"
              >
                M
              </abbr>
            </span>
          </Avatar>
        </Avatar>
        <Avatar
          shape="circle"
          size="medium"
        >
          <Avatar
            icon={
              <IconCloud
                size="medium"
                title="cloud"
              />
            }
            shape="circle"
            size="medium"
          >
            <span
              className="emotion-7"
            >
              <IconCloud
                size="medium"
                title="cloud"
              >
                <Icon
                  rtl={false}
                  size="medium"
                  title="cloud"
                >
                  <Styled(svg)
                    aria-hidden={null}
                    aria-labelledby="icon-title-icon-4"
                    focusable="false"
                    role="img"
                    rtl={false}
                    size="medium"
                    viewBox="0 0 24 24"
                  >
                    <svg
                      aria-hidden={null}
                      aria-labelledby="icon-title-icon-4"
                      className="emotion-2"
                      focusable="false"
                      role="img"
                      viewBox="0 0 24 24"
                    >
                      <title
                        id="icon-title-icon-4"
                      >
                        cloud
                      </title>
                      <g>
                        <path
                          d="M19.35 10.04A7.49 7.49 0 0 0 12 4C9.11 4 6.6 5.64 5.35 8.04A5.994 5.994 0 0 0 0 14c0 3.31 2.69 6 6 6h13c2.76 0 5-2.24 5-5 0-2.64-2.05-4.78-4.65-4.96z"
                        />
                      </g>
                    </svg>
                  </Styled(svg)>
                </Icon>
              </IconCloud>
            </span>
          </Avatar>
        </Avatar>
        <br />
        <Avatar
          shape="circle"
          size="large"
        >
          <Avatar
            noBackground={true}
            shape="circle"
            size="large"
          >
            <span
              className="emotion-8"
            >
              <img
                alt="Larry"
                src="/images/avatar.svg"
              />
            </span>
          </Avatar>
        </Avatar>
        <Avatar
          shape="circle"
          size="large"
        >
          <Avatar
            shape="circle"
            size="large"
          >
            <span
              className="emotion-9"
            >
              <abbr
                title="Larry"
              >
                L
              </abbr>
            </span>
          </Avatar>
        </Avatar>
        <Avatar
          shape="circle"
          size="large"
        >
          <Avatar
            icon={
              <IconCloud
                size="1.5em"
                title="cloud"
              />
            }
            shape="circle"
            size="large"
          >
            <span
              className="emotion-11"
            >
              <IconCloud
                size="1.5em"
                title="cloud"
              >
                <Icon
                  rtl={false}
                  size="1.5em"
                  title="cloud"
                >
                  <Styled(svg)
                    aria-hidden={null}
                    aria-labelledby="icon-title-icon-5"
                    focusable="false"
                    role="img"
                    rtl={false}
                    size="1.5em"
                    viewBox="0 0 24 24"
                  >
                    <svg
                      aria-hidden={null}
                      aria-labelledby="icon-title-icon-5"
                      className="emotion-10"
                      focusable="false"
                      role="img"
                      viewBox="0 0 24 24"
                    >
                      <title
                        id="icon-title-icon-5"
                      >
                        cloud
                      </title>
                      <g>
                        <path
                          d="M19.35 10.04A7.49 7.49 0 0 0 12 4C9.11 4 6.6 5.64 5.35 8.04A5.994 5.994 0 0 0 0 14c0 3.31 2.69 6 6 6h13c2.76 0 5-2.24 5-5 0-2.64-2.05-4.78-4.65-4.96z"
                        />
                      </g>
                    </svg>
                  </Styled(svg)>
                </Icon>
              </IconCloud>
            </span>
          </Avatar>
        </Avatar>
        <br />
        <Avatar
          shape="circle"
          size="jumbo"
        >
          <Avatar
            noBackground={true}
            shape="circle"
            size="jumbo"
          >
            <span
              className="emotion-12"
            >
              <img
                alt="Jennifer"
                src="/images/avatar.svg"
              />
            </span>
          </Avatar>
        </Avatar>
        <Avatar
          shape="circle"
          size="jumbo"
        >
          <Avatar
            shape="circle"
            size="jumbo"
          >
            <span
              className="emotion-13"
            >
              <abbr
                title="Jennifer"
              >
                J
              </abbr>
            </span>
          </Avatar>
        </Avatar>
        <Avatar
          shape="circle"
          size="jumbo"
        >
          <Avatar
            icon={
              <IconCloud
                size="1.5em"
                title="cloud"
              />
            }
            shape="circle"
            size="jumbo"
          >
            <span
              className="emotion-15"
            >
              <IconCloud
                size="1.5em"
                title="cloud"
              >
                <Icon
                  rtl={false}
                  size="1.5em"
                  title="cloud"
                >
                  <Styled(svg)
                    aria-hidden={null}
                    aria-labelledby="icon-title-icon-6"
                    focusable="false"
                    role="img"
                    rtl={false}
                    size="1.5em"
                    viewBox="0 0 24 24"
                  >
                    <svg
                      aria-hidden={null}
                      aria-labelledby="icon-title-icon-6"
                      className="emotion-10"
                      focusable="false"
                      role="img"
                      viewBox="0 0 24 24"
                    >
                      <title
                        id="icon-title-icon-6"
                      >
                        cloud
                      </title>
                      <g>
                        <path
                          d="M19.35 10.04A7.49 7.49 0 0 0 12 4C9.11 4 6.6 5.64 5.35 8.04A5.994 5.994 0 0 0 0 14c0 3.31 2.69 6 6 6h13c2.76 0 5-2.24 5-5 0-2.64-2.05-4.78-4.65-4.96z"
                        />
                      </g>
                    </svg>
                  </Styled(svg)>
                </Icon>
              </IconCloud>
            </span>
          </Avatar>
        </Avatar>
      </div>
    </Styled(div)>
  </DemoLayout>
</DemoLayout>
`;
